# Robot-test-project-demo

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: playwright.yml  selenium.yml
keywords/: selenium_custom_keywords.py
tests/: playwright_tests.robot  selenium_resource.robot  selenium_tests.robot
